# ZRA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  zra.cpp  zra.hpp  zratool.cpp
.github/workflows/: c-cpp.yml
include/: zra.h  zra.hpp
programs/: zratool.cpp
source/: zra.cpp
